refactor: headers action

--- a/.github/workflows/deploy-r2.yml
+++ b/.github/workflows/deploy-r2.yml
@@ -2,8 +2,7 @@ name: Deploy to Cloudflare R2
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   deploy:
@@ -13,24 +12,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          node-version: '20.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          aws-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
+          aws-region: auto
+      - name: Install AWS CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
 
       - name: Build project
-        run: npm run build
+        run: npm ci && npm run build
 
-      - name: Upload build output to Cloudflare R2
-        uses: ryand56/r2-upload-action@latest
-        with:
-          r2-account-id: ${{ secrets.R2_ACCOUNT_ID }}
-          r2-access-key-id: ${{ secrets.R2_ACCESS_KEY_ID }}
-          r2-secret-access-key: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-          r2-bucket: ${{ secrets.R2_BUCKET }}
-          source-dir: ./dist
-          destination-dir: ./
+      - name: Upload index.html with short cache
+        run: |
+          aws --endpoint-url=https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
+            s3 cp ./dist/index.html s3://${{ secrets.R2_BUCKET }}/index.html \
+            --cache-control "max-age=0, s-maxage=31536000" \
+            --metadata-directive REPLACE
+
+      - name: Upload /assets with long cache
+        run: |
+          aws --endpoint-url=https://${{ secrets.R2_ACCOUNT_ID }}.r2.cloudflarestorage.com \
+            s3 sync ./dist/assets s3://${{ secrets.R2_BUCKET }}/assets \
+            --cache-control "public, max-age=31536000, immutable" \
+            --delete
